Added custom responses to dialogs + more
Added connect to localhost option
^ Multiplayer is functional again
Add some fancy java 21 features
Added formatting to logging strings
Updated lunar network library
Updated some entity handling
Working on cleaning + refactoring project